2012-04-23  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/NetworkServer.pm,
	  lib/PandoraFMS/WMIServer.pm,
	  lib/PandoraFMS/PluginServer.pm: Merged from trunk. Simplified the
	  calculation of time_left to make sure it is always positive. Fixes
	  bug #3519099.

2012-04-20  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Do not try to reset the internal counter
	  unless it is > 0. Fixes bug #3519518. Removed some 5.0 code that
	  seems to have been merged by mistake and fixed a warning.

2012-04-20  Sergio Martin <sergio.martin@artica.es>

	* lib/PandoraFMS/Core.pm: Setted last_reference to current utimestamp
	in the alert table when create it

2012-04-19  Sancho Lerena <slerena@artica.es>

	* util/pandora_xml_stress.conf: default path for default agentname list.

	* lib/PandoraFMS/DataServer.pm: Units are not overwrite by an empty XML
	parameter.

	* lib/PandoraFMS/ReconServer.pm: Fixed creation of network components
	with double encoding.

	* lib/PandoraFMS/Core.pm: Applied Junichi patch (from trunk) for detecting
	keepalive in some newer SQL systems. Added a lot of safe_output in logfile.
	Added aditional check for INC types on date collision (same date for different
	data). Fixed generation of some events with double encoding. 

2012-04-18  Sancho Lerena <slerena@artica.es>

	* pandora_server_installer: Fixed version.

	* lib/PandoraFMS/Config.pm: Updated version.

	* util/pandora_db.pl: Updated version.

	* util/plugin/SMTP_check.pl: New remote plugin to check SMTP.

	* util/pandora_xml_stress.agents: New default file for XML stress with "real names".
	
	* util/pandora_xml_stress.conf: Better default config.

2012-04-18  Koichiro Kikuchi  <koichiro@rworks.jp>

	* util/pandora_db.pl: Fixed several syntax errors.

2012-04-18 Dario Rodriguez <dario.rodriguez@artica.es>

	* pandora_server_installer: Fixed a problem setting permissions
	for /var/spool/pandora directory because an incorrect web server
	group mathcing
